Hyprland config change

--- a/hypr/configs/Keybinds.conf
+++ b/hypr/configs/Keybinds.conf
@@ -10,7 +10,7 @@ $UserConfigs = $HOME/.config/hypr/UserConfigs
 $UserScripts = $HOME/.config/hypr/UserScripts
 
 #bind = CTRL ALT, Delete, exec, hyprctl dispatch exit 0
-#bind = $mainMod, Q, killactive, #kill
+bind = $mainMod, D, killactive, #kill
 bind = $mainMod, Escape, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
 bind = Alt, F4, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
 bind = $mainMod, L, exec, $scriptsDir/LockScreen.sh # screen lock
