--- a/hypr/UserConfigs/WindowRules.conf
+++ b/hypr/UserConfigs/WindowRules.conf
@@ -200,3 +200,6 @@ layerrule = ignorezero, notifications
 
 #layerrule = ignorezero, overview
 #layerrule = blur, overview
+windowrulev2 = minsize 1 1, class:^(steam)$, title:^(Steam)$
+windowrulev2 = minsize 1 1, class:^(code)$
+windowrulev2 = minsize 1 1, class:^(SVPManager)$
