--- a/hypr/wallust/wallust-hyprland.conf
+++ b/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(050000)
-$foreground = rgb(F8EEDC)
-$color0 = rgb(050000)
-$color1 = rgb(2E2419)
-$color2 = rgb(5B432F)
-$color3 = rgb(8D6649)
-$color4 = rgb(946A4C)
-$color5 = rgb(966E4F)
-$color6 = rgb(B09B74)
-$color7 = rgb(ECDEC4)
-$color8 = rgb(A59C8A)
-$color9 = rgb(3E3021)
-$color10 = rgb(79593F)
-$color11 = rgb(BD8862)
-$color12 = rgb(C58E66)
-$color13 = rgb(C79269)
-$color14 = rgb(EBCF9B)
-$color15 = rgb(ECDEC4)
+$background = rgb(282626)
+$foreground = rgb(EBEAEA)
+$color0 = rgb(4E4B4C)
+$color1 = rgb(241A1C)
+$color2 = rgb(70312D)
+$color3 = rgb(68435A)
+$color4 = rgb(405B7D)
+$color5 = rgb(91646A)
+$color6 = rgb(949292)
+$color7 = rgb(DAD8D9)
+$color8 = rgb(999798)
+$color9 = rgb(302325)
+$color10 = rgb(95413C)
+$color11 = rgb(8B5978)
+$color12 = rgb(567AA7)
+$color13 = rgb(C1858D)
+$color14 = rgb(C6C2C3)
+$color15 = rgb(DAD8D9)
