--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(282626)
-$foreground = rgb(EBEAEA)
-$color0 = rgb(4E4B4C)
-$color1 = rgb(241A1C)
-$color2 = rgb(70312D)
-$color3 = rgb(68435A)
-$color4 = rgb(405B7D)
-$color5 = rgb(91646A)
-$color6 = rgb(949292)
-$color7 = rgb(DAD8D9)
-$color8 = rgb(999798)
-$color9 = rgb(302325)
-$color10 = rgb(95413C)
-$color11 = rgb(8B5978)
-$color12 = rgb(567AA7)
-$color13 = rgb(C1858D)
-$color14 = rgb(C6C2C3)
-$color15 = rgb(DAD8D9)
+$background = rgb(16181A)
+$foreground = rgb(F2F5F7)
+$color0 = rgb(3C3F41)
+$color1 = rgb(06141A)
+$color2 = rgb(374248)
+$color3 = rgb(425264)
+$color4 = rgb(5F686D)
+$color5 = rgb(9AA0A4)
+$color6 = rgb(A4A9AD)
+$color7 = rgb(E5E8EA)
+$color8 = rgb(A0A2A4)
+$color9 = rgb(081A23)
+$color10 = rgb(4A5860)
+$color11 = rgb(586E85)
+$color12 = rgb(7F8A91)
+$color13 = rgb(CED5DB)
+$color14 = rgb(DBE1E7)
+$color15 = rgb(E5E8EA)
