--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -24,7 +24,7 @@ bind = $mainMod, E, exec, $files #file manager
 # FEATURES / EXTRAS
 bind = $mainMod, H, exec, $scriptsDir/KeyHints.sh # help / cheat sheet
 bind = $mainMod ALT, R, exec, $scriptsDir/Refresh.sh # Refresh waybar, swaync, rofi
-bind = $mainMod ALT, E, exec, $scriptsDir/RofiEmoji.sh # emoji menu
+bind = $mainMod, period, exec, $scriptsDir/RofiEmoji.sh # emoji menu
 #bind = $mainMod, S, exec, $scriptsDir/RofiSearch.sh # Google search using rofi
 bind = $mainMod ALT, O, exec, $scriptsDir/ChangeBlur.sh # Toggle blur settings 
 bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # Toggle animations ON/OFF
