Adjust screenshot config

--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -56,11 +56,11 @@ bindl = , xf86AudioPrev, exec, $scriptsDir/MediaCtrl.sh --prv
 bindl = , xf86audiostop, exec, $scriptsDir/MediaCtrl.sh --stop
 
 # Screenshot keybindings NOTE: You may need to press Fn key as well
-bind = $mainMod, Print, exec, $scriptsDir/ScreenShot.sh --now  # screenshot
-bind = $mainMod SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --area # screenshot (area)
-bind = $mainMod CTRL, Print, exec, $scriptsDir/ScreenShot.sh --in5 # screenshot  (5 secs delay)
-bind = $mainMod CTRL SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --in10 # screenshot (10 secs delay)
-bind = ALT, Print, exec, $scriptsDir/ScreenShot.sh --active # screenshot (active window only)
+#bind = $mainMod, Print, exec, $scriptsDir/ScreenShot.sh --now  # screenshot
+#bind = $mainMod SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --area # screenshot (area)
+#bind = $mainMod CTRL, Print, exec, $scriptsDir/ScreenShot.sh --in5 # screenshot  (5 secs delay)
+#bind = $mainMod CTRL SHIFT, Print, exec, $scriptsDir/ScreenShot.sh --in10 # screenshot (10 secs delay)
+bind = $mainMod, Print, exec, $scriptsDir/ScreenShot.sh --active # screenshot (active window only)
 
 # screenshot with swappy (another screenshot tool)
 bind = $mainMod SHIFT, S, exec, $scriptsDir/ScreenShot.sh --swappy #screenshot (swappy)
