Fix kill process shortcut

--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -201,5 +201,7 @@ layerrule = ignorezero, notifications
 #layerrule = ignorezero, overview
 #layerrule = blur, overview
 windowrulev2 = minsize 1 1, class:^(steam)$, title:^(Steam)$
+windowrulev2 = workspace 5 silent, class:^(steam)$, title:^(Steam)$
+windowrulev2 = noinitialfocus, class:^(steam)$, title:^(Steam)$
 windowrulev2 = minsize 1 1, class:^(code)$
 windowrulev2 = minsize 1 1, class:^(SVPManager)$
