--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -11,7 +11,7 @@ $UserScripts = $HOME/.config/hypr/UserScripts
 
 #bind = CTRL ALT, Delete, exec, hyprctl dispatch exit 0
 bind = $mainMod, D, killactive, #kill
-bind = $mainMod, Escape, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
+bind = $mainMod, ESCAPE, killactive, #kill
 bind = Alt, F4, exec, $scriptsDir/KillActiveProcess.sh # Kill active process
 bind = $mainMod, L, exec, $scriptsDir/LockScreen.sh # screen lock
 #bind = CTRL ALT, P, exec, $scriptsDir/Wlogout.sh # power menu
