--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(16181A)
-$foreground = rgb(F2F5F7)
-$color0 = rgb(3C3F41)
-$color1 = rgb(06141A)
-$color2 = rgb(374248)
-$color3 = rgb(425264)
-$color4 = rgb(5F686D)
-$color5 = rgb(9AA0A4)
-$color6 = rgb(A4A9AD)
-$color7 = rgb(E5E8EA)
-$color8 = rgb(A0A2A4)
-$color9 = rgb(081A23)
-$color10 = rgb(4A5860)
-$color11 = rgb(586E85)
-$color12 = rgb(7F8A91)
-$color13 = rgb(CED5DB)
-$color14 = rgb(DBE1E7)
-$color15 = rgb(E5E8EA)
+$background = rgb(201A1A)
+$foreground = rgb(EDE1E1)
+$color0 = rgb(474040)
+$color1 = rgb(230E0E)
+$color2 = rgb(611B28)
+$color3 = rgb(614B50)
+$color4 = rgb(654E53)
+$color5 = rgb(8F7577)
+$color6 = rgb(997F80)
+$color7 = rgb(DDCCCC)
+$color8 = rgb(9B8E8F)
+$color9 = rgb(2F1313)
+$color10 = rgb(812435)
+$color11 = rgb(82646B)
+$color12 = rgb(87686F)
+$color13 = rgb(BE9C9E)
+$color14 = rgb(CCA9AA)
+$color15 = rgb(DDCCCC)
