feat: Adjust workspace rules feat: Adjust waybar color

--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -99,7 +99,7 @@ windowrulev2 = idleinhibit fullscreen, fullscreen:1
 
 # windowrule v2 move to workspace
 windowrulev2 = workspace 1, tag:email*
-windowrulev2 = workspace 2, tag:browser*
+#windowrulev2 = workspace 2, tag:browser*
 #windowrulev2 = workspace 3, class:^([Tt]hunar)$
 #windowrulev2 = workspace 3, tag:projects*
 windowrulev2 = workspace 5, tag:gamestore*
@@ -201,7 +201,9 @@ layerrule = ignorezero, notifications
 #layerrule = ignorezero, overview
 #layerrule = blur, overview
 windowrulev2 = minsize 1 1, class:^(steam)$, title:^(Steam)$
-windowrulev2 = workspace 5 silent, class:^(steam)$, title:^(Steam)$
 windowrulev2 = noinitialfocus, class:^(steam)$, title:^(Steam)$
 windowrulev2 = minsize 1 1, class:^(code)$
 windowrulev2 = minsize 1 1, class:^(SVPManager)$
+windowrulev2 = workspace 5 silent, class:^(steam)$, title:^(Steam)$
+windowrulev2 = workspace 9, class:^(wechat)$
+windowrulev2 = workspace 9, class:^(QQ)$
