--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(201A1A)
-$foreground = rgb(EDE1E1)
-$color0 = rgb(474040)
-$color1 = rgb(230E0E)
-$color2 = rgb(611B28)
-$color3 = rgb(614B50)
-$color4 = rgb(654E53)
-$color5 = rgb(8F7577)
-$color6 = rgb(997F80)
-$color7 = rgb(DDCCCC)
-$color8 = rgb(9B8E8F)
-$color9 = rgb(2F1313)
-$color10 = rgb(812435)
-$color11 = rgb(82646B)
-$color12 = rgb(87686F)
-$color13 = rgb(BE9C9E)
-$color14 = rgb(CCA9AA)
-$color15 = rgb(DDCCCC)
+$background = rgb(070000)
+$foreground = rgb(F8E6DB)
+$color0 = rgb(070000)
+$color1 = rgb(464459)
+$color2 = rgb(874134)
+$color3 = rgb(736263)
+$color4 = rgb(817077)
+$color5 = rgb(A88470)
+$color6 = rgb(B08971)
+$color7 = rgb(ECD3C3)
+$color8 = rgb(A59388)
+$color9 = rgb(5D5A77)
+$color10 = rgb(B45746)
+$color11 = rgb(9A8285)
+$color12 = rgb(AC959E)
+$color13 = rgb(E0B095)
+$color14 = rgb(EAB797)
+$color15 = rgb(ECD3C3)
