fix: audio delay

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -3,5 +3,5 @@ opengl-early-flush=no
 no-resume-playback
 hwdec=auto
 #video-sync=display-resample
-force-seekable=yes
+# force-seekable=yes
 scale=ewa_lanczossharp
