pref: prettify the waybar style

--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(070000)
-$foreground = rgb(F8E6DB)
-$color0 = rgb(070000)
-$color1 = rgb(464459)
-$color2 = rgb(874134)
-$color3 = rgb(736263)
-$color4 = rgb(817077)
-$color5 = rgb(A88470)
-$color6 = rgb(B08971)
-$color7 = rgb(ECD3C3)
-$color8 = rgb(A59388)
-$color9 = rgb(5D5A77)
-$color10 = rgb(B45746)
-$color11 = rgb(9A8285)
-$color12 = rgb(AC959E)
-$color13 = rgb(E0B095)
-$color14 = rgb(EAB797)
-$color15 = rgb(ECD3C3)
+$background = rgb(1A181A)
+$foreground = rgb(ECE0E0)
+$color0 = rgb(413F41)
+$color1 = rgb(2F252A)
+$color2 = rgb(4A4256)
+$color3 = rgb(5F4D51)
+$color4 = rgb(8F7577)
+$color5 = rgb(6981B0)
+$color6 = rgb(977C7E)
+$color7 = rgb(DCCACB)
+$color8 = rgb(9A8D8E)
+$color9 = rgb(3E3139)
+$color10 = rgb(635973)
+$color11 = rgb(7F666C)
+$color12 = rgb(BF9C9F)
+$color13 = rgb(8CACEA)
+$color14 = rgb(CAA5A8)
+$color15 = rgb(DCCACB)
