feat: Add svp config

--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -3,5 +3,23 @@ opengl-early-flush=no
 no-resume-playback
 hwdec=auto
 #video-sync=display-resample
-# force-seekable=yes
+#force-seekable=yes
 scale=ewa_lanczossharp
+hwdec-codecs=all
+hr-seek-framedrop=no
+
+###################################
+## SVP
+# Linux
+input-ipc-server=/tmp/mpvsocket
+# Windows
+#input-ipc-server=mpvpipe
+
+# Vapoursynth
+#hwdec=auto-copy
+
+
+# MacOs
+#opengl-early-flush=no
+
+####################################
