--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -44,7 +44,7 @@ bind = $mainMod CTRL ALT, P, exec, pkill -SIGUSR1 waybar # Toggle hide/show wayb
 #bind = $mainMod ALT, B, exec, $scriptsDir/WaybarLayout.sh # Waybar Layout Menu
 
 # FEATURES / EXTRAS (UserScripts)
-bind = $mainMod, N, exec, $UserScripts/Kool_Quick_Settings.sh # Settings Menu KooL Hyprland Settings
+bind = $mainMod, N, exec, $scriptsDir/Kool_Quick_Settings.sh # Settings Menu KooL Hyprland Settings
 bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music using rofi
 bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
 bind = $mainMod SHIFT, W, exec, $UserScripts/WallpaperEffects.sh # Wallpaper Effects by imagemagick
@@ -57,9 +57,10 @@ bindln = ALT_L, SHIFT_L, exec, $scriptsDir/SwitchKeyboardLayout.sh # Change keyb
 bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # calculator (qalculate)
 bind = $mainMod, S, exec, tofi-drun | xargs hyprctl dispatch exec --
 
-# pyprland (This is not available in Debian and Ubuntu)
-bind = $mainMod SHIFT, Return, exec, pypr toggle term # Dropdown terminal not avail Debian and Ubuntu
-bind = $mainMod, Z, exec, pypr zoom # Toggle Desktop Zoom
+# Desktop zooming or magnifier
+bind = $mainMod ALT, mouse_down, exec, hyprctl keyword cursor:zoom_factor "$(hyprctl getoption cursor:zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor * 2.0}')"
+bind = $mainMod ALT, mouse_up, exec, hyprctl keyword cursor:zoom_factor "$(hyprctl getoption cursor:zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor / 2.0}')" 
+
 
 
 # For passthrough keyboard into a VM
