--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(1A181A)
-$foreground = rgb(ECE0E0)
-$color0 = rgb(413F41)
-$color1 = rgb(2F252A)
-$color2 = rgb(4A4256)
-$color3 = rgb(5F4D51)
-$color4 = rgb(8F7577)
-$color5 = rgb(6981B0)
-$color6 = rgb(977C7E)
-$color7 = rgb(DCCACB)
-$color8 = rgb(9A8D8E)
-$color9 = rgb(3E3139)
-$color10 = rgb(635973)
-$color11 = rgb(7F666C)
-$color12 = rgb(BF9C9F)
-$color13 = rgb(8CACEA)
-$color14 = rgb(CAA5A8)
-$color15 = rgb(DCCACB)
+$background = rgb(282A2B)
+$foreground = rgb(E3EAF0)
+$color0 = rgb(4D5050)
+$color1 = rgb(1A386E)
+$color2 = rgb(3B4F61)
+$color3 = rgb(577491)
+$color4 = rgb(577491)
+$color5 = rgb(8F6951)
+$color6 = rgb(8392A0)
+$color7 = rgb(CFD8E2)
+$color8 = rgb(91979E)
+$color9 = rgb(234B93)
+$color10 = rgb(4F6A82)
+$color11 = rgb(749AC1)
+$color12 = rgb(749AC1)
+$color13 = rgb(BF8C6C)
+$color14 = rgb(AFC2D5)
+$color15 = rgb(CFD8E2)
