--- a/.config/hypr/UserConfigs/ENVariables.conf
+++ b/.config/hypr/UserConfigs/ENVariables.conf
@@ -1,8 +1,7 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 # Environment variables. See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-# Set your defaults here
-env = EDITOR,vim #default editor
+# Set your defaults editor through ENV in ~/.config/hypr/UserConfigs/01-UserDefaults.conf
 
 # environment-variables
 # Toolkit Backend Variables
@@ -10,7 +9,7 @@ env = GDK_BACKEND,wayland,x11,*
 env = QT_QPA_PLATFORM,wayland;xcb
 env = CLUTTER_BACKEND,wayland
 
-#Run SDL2 applications on Wayland. 
+#Run SDL2 applications on Wayland.
 #Remove or set to x11 if games that provide older versions of SDL cause compatibility issues
 #env = SDL_VIDEODRIVER,wayland
 
@@ -20,9 +19,9 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 
 # QT Variables
-env = QT_AUTO_SCREEN_SCALE_FACTOR,1.5
+env = QT_AUTO_SCREEN_SCALE_FACTOR,1
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
-env = QT_QPA_PLATFORMTHEME,qt5ct 
+env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_QPA_PLATFORMTHEME,qt6ct
 
 # hyprland-qt-support
@@ -34,13 +33,12 @@ env = QT_QUICK_CONTROLS_STYLE,org.hyprland.style
 # see https://wiki.hyprland.org/Configuring/XWayland/
 env = GDK_SCALE,1
 env = QT_SCALE_FACTOR,1
-env = XCURSOR_SIZE,24
 
 # Bibata-Modern-Ice-Cursor
 # NOTE! You must have the hyprcursor version to activate this.
 # https://wiki.hyprland.org/Hypr-Ecosystem/hyprcursor/
-env = HYPRCURSOR_THEME,Bibata-Modern-Ice
-env = HYPRCURSOR_SIZE,24
+#env = HYPRCURSOR_THEME,Bibata-Modern-Ice
+#env = HYPRCURSOR_SIZE,24
 
 # firefox
 env = MOZ_ENABLE_WAYLAND,1
@@ -49,19 +47,19 @@ env = MOZ_ENABLE_WAYLAND,1
 # https://www.electronjs.org/docs/latest/api/environment-variables
 env = ELECTRON_OZONE_PLATFORM_HINT,auto # auto selects Wayland if possible, X11 otherwise
 
-# NVIDIA 
+# NVIDIA
 # This is from Hyprland Wiki. Below will be activated nvidia gpu detected
 # See hyprland wiki https://wiki.hyprland.org/Nvidia/#environment-variables
 
-#env = LIBVA_DRIVER_NAME,nvidia 
+#env = LIBVA_DRIVER_NAME,nvidia
 #env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-#env = NVD_BACKEND,direct 
+#env = NVD_BACKEND,direct
 
 # additional ENV's for nvidia. Caution, activate with care
-#env = GBM_BACKEND,nvidia-drm 
+#env = GBM_BACKEND,nvidia-drm
 
 #env = __GL_GSYNC_ALLOWED,1 #adaptive Vsync
-#env = __NV_PRIME_RENDER_OFFLOAD,1 
+#env = __NV_PRIME_RENDER_OFFLOAD,1
 #env = __VK_LAYER_NV_optimus,NVIDIA_only
 #env = WLR_DRM_NO_ATOMIC,1
 
