--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(282A2B)
-$foreground = rgb(E3EAF0)
-$color0 = rgb(4D5050)
-$color1 = rgb(1A386E)
-$color2 = rgb(3B4F61)
-$color3 = rgb(577491)
-$color4 = rgb(577491)
-$color5 = rgb(8F6951)
-$color6 = rgb(8392A0)
-$color7 = rgb(CFD8E2)
-$color8 = rgb(91979E)
-$color9 = rgb(234B93)
-$color10 = rgb(4F6A82)
-$color11 = rgb(749AC1)
-$color12 = rgb(749AC1)
-$color13 = rgb(BF8C6C)
-$color14 = rgb(AFC2D5)
-$color15 = rgb(CFD8E2)
+$background = rgb(151414)
+$foreground = rgb(F3E9E3)
+$color0 = rgb(3C3C3B)
+$color1 = rgb(17130E)
+$color2 = rgb(473214)
+$color3 = rgb(3C3D38)
+$color4 = rgb(7E541C)
+$color5 = rgb(7E541C)
+$color6 = rgb(A59084)
+$color7 = rgb(E5D7CF)
+$color8 = rgb(A09791)
+$color9 = rgb(1F1A12)
+$color10 = rgb(5F421B)
+$color11 = rgb(50514B)
+$color12 = rgb(A87025)
+$color13 = rgb(A87025)
+$color14 = rgb(DCC0B0)
+$color15 = rgb(E5D7CF)
