feat: adjust shorcut

--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -66,10 +66,10 @@ bind = $mainMod, Print, exec, $scriptsDir/ScreenShot.sh --active # screenshot (a
 bind = $mainMod SHIFT, S, exec, $scriptsDir/ScreenShot.sh --swappy #screenshot (swappy)
 
 # Resize windows
-binde = $mainMod SHIFT, left, resizeactive,-50 0
-binde = $mainMod SHIFT, right, resizeactive,50 0
-binde = $mainMod SHIFT, up, resizeactive,0 -50
-binde = $mainMod SHIFT, down, resizeactive,0 50
+binde = $mainMod ALT, left, resizeactive,-50 0
+binde = $mainMod ALT, right, resizeactive,50 0
+binde = $mainMod ALT, up, resizeactive,0 -50
+binde = $mainMod ALT, down, resizeactive,0 50
 
 # Move windows
 bind = $mainMod, left, movewindow, l
@@ -84,10 +84,10 @@ bind = $mainMod, down, movewindow, d
 #bind = $mainMod ALT, down, swapwindow, d
 
 # Move focus with mainMod + arrow keys
-bind = $mainMod ALT, left, movefocus, l
-bind = $mainMod ALT, right, movefocus, r
-bind = $mainMod ALT, up, movefocus, u
-bind = $mainMod ALT, down, movefocus, d
+bind = CTRL ALT, left, movefocus, l
+bind = CTRL ALT, right, movefocus, r
+bind = CTRL ALT, up, movefocus, u
+bind = CTRL ALT, down, movefocus, d
 
 # Workspaces related
 bind = $mainMod, tab, workspace, m+1
