--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(151414)
-$foreground = rgb(F3E9E3)
-$color0 = rgb(3C3C3B)
-$color1 = rgb(17130E)
-$color2 = rgb(473214)
-$color3 = rgb(3C3D38)
-$color4 = rgb(7E541C)
-$color5 = rgb(7E541C)
-$color6 = rgb(A59084)
-$color7 = rgb(E5D7CF)
-$color8 = rgb(A09791)
-$color9 = rgb(1F1A12)
-$color10 = rgb(5F421B)
-$color11 = rgb(50514B)
-$color12 = rgb(A87025)
-$color13 = rgb(A87025)
-$color14 = rgb(DCC0B0)
-$color15 = rgb(E5D7CF)
+$background = rgb(000000)
+$foreground = rgb(FBF6E7)
+$color0 = rgb(171714)
+$color1 = rgb(35697D)
+$color2 = rgb(947619)
+$color3 = rgb(919DA0)
+$color4 = rgb(919DA0)
+$color5 = rgb(B4AA8D)
+$color6 = rgb(B6AB8C)
+$color7 = rgb(F1E9D5)
+$color8 = rgb(A8A395)
+$color9 = rgb(468CA7)
+$color10 = rgb(C59E21)
+$color11 = rgb(C1D2D5)
+$color12 = rgb(C1D2D5)
+$color13 = rgb(F0E3BD)
+$color14 = rgb(F3E4BB)
+$color15 = rgb(F1E9D5)
