--- a/.config/hypr/wallust/wallust-hyprland.conf
+++ b/.config/hypr/wallust/wallust-hyprland.conf
@@ -1,21 +1,21 @@
 # /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
 # /* wallust template - colors-hyprland */ 
 
-$background = rgb(000000)
-$foreground = rgb(FBF6E7)
-$color0 = rgb(171714)
-$color1 = rgb(35697D)
-$color2 = rgb(947619)
-$color3 = rgb(919DA0)
-$color4 = rgb(919DA0)
-$color5 = rgb(B4AA8D)
-$color6 = rgb(B6AB8C)
-$color7 = rgb(F1E9D5)
-$color8 = rgb(A8A395)
-$color9 = rgb(468CA7)
-$color10 = rgb(C59E21)
-$color11 = rgb(C1D2D5)
-$color12 = rgb(C1D2D5)
-$color13 = rgb(F0E3BD)
-$color14 = rgb(F3E4BB)
-$color15 = rgb(F1E9D5)
+$background = rgb(02000F)
+$foreground = rgb(FBF2F5)
+$color0 = rgb(02000F)
+$color1 = rgb(26244C)
+$color2 = rgb(535191)
+$color3 = rgb(535191)
+$color4 = rgb(535191)
+$color5 = rgb(877AA2)
+$color6 = rgb(B6A4A9)
+$color7 = rgb(F1E5E8)
+$color8 = rgb(A8A0A2)
+$color9 = rgb(333066)
+$color10 = rgb(6F6CC1)
+$color11 = rgb(6F6CC1)
+$color12 = rgb(6F6CC1)
+$color13 = rgb(B4A2D8)
+$color14 = rgb(F3DBE1)
+$color15 = rgb(F1E5E8)
