--- a/.config/hypr/UserConfigs/WindowRules.conf
+++ b/.config/hypr/UserConfigs/WindowRules.conf
@@ -187,11 +187,15 @@ windowrulev2 = fullscreen, tag:games*
 #windowrulev2 = opacity 0.8 0.8, pinned:1
 
 # LAYER RULES
-layerrule = blur, rofi
-layerrule = ignorezero, rofi
-layerrule = blur, notifications
-layerrule = ignorezero, notifications
+#layerrule = blur on, rofi
+#layerrule = ignorezero, rofi
+#layerrule = blur, notifications
+#layerrule = ignorezero, notifications
 #layerrule = ignorealpha 0.5, tag:notif*
+
+layerrule = blur on
+layerrule = xray on
+layerrule = ignore_alpha 0
 
 #layerrule = ignorezero, class:^([Rr]ofi)$
 #layerrule = blur, class:^([Rr]ofi)$
