--- a/.config/hypr/UserConfigs/UserKeybinds.conf
+++ b/.config/hypr/UserConfigs/UserKeybinds.conf
@@ -7,59 +7,33 @@
 
 # /* ---- ✴️ Variables ✴️ ---- */  #
 $mainMod = SUPER
-$files = thunar
-$term = kitty
 $scriptsDir = $HOME/.config/hypr/scripts
 $UserScripts = $HOME/.config/hypr/UserScripts
+$UserConfigs = $HOME/.config/hypr/UserConfigs
 
-# common shortcuts
-#bindr = $mainMod, $mainMod_L, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window # Super Key to Launch rofi menu
-#bind = $mainMod CTRL, B, exec, pkill rofi || true && rofi -show drun -modi drun,filebrowser,run,window # Main Menu (APP Launcher)
-bind = CTRL ALT, B, exec, xdg-open "http://www.google.com"  # default browser
-#bind = $mainMod, A, exec, pkill rofi || true && ags -t 'overview' # desktop overview (if installed)
-bind = $mainMod, X, exec, $term  #terminal
-bind = $mainMod, E, exec, $files #file manager
+#  IMPORTANT: If you want to remap and existing keybind you MUST unbindd it first 
+
+# The bindings are CASE SENSITIVE. We suggest you copy the exisitng binding here
+#  Then change `bindd` to `unbind`
+
+# E.g. 
+# unbind = $mainMod, Return, Open terminal, exec, $term
+# bindd = $mainMod, Return, Open terminal, exec, ghostty 
+#
+# unbind = $mainMod, E, file manager, exec, $files
+# bindd = $mainMod, T, file manager, exec, $files
+
+# If you are ADDING a bindd, make sure you include the description 
+# Other the keybind search menu might not show it properly 
+
+# E.g.
+# bindd = $mainMod, Z, My z app, exec APPNAME
 
 
-# FEATURES / EXTRAS
-bind = $mainMod, H, exec, $scriptsDir/KeyHints.sh # help / cheat sheet
-bind = $mainMod ALT, R, exec, $scriptsDir/Refresh.sh # Refresh waybar, swaync, rofi
-bind = $mainMod, period, exec, $scriptsDir/RofiEmoji.sh # emoji menu
-#bind = $mainMod, S, exec, $scriptsDir/RofiSearch.sh # Google search using rofi
-bind = $mainMod ALT, O, exec, $scriptsDir/ChangeBlur.sh # Toggle blur settings 
-bind = $mainMod SHIFT, G, exec, $scriptsDir/GameMode.sh # Toggle animations ON/OFF
-bind = $mainMod ALT, L, exec, $scriptsDir/ChangeLayout.sh # Toggle Master or Dwindle Layout
-#bind = $mainMod, V, exec, $scriptsDir/ClipManager.sh # Clipboard Manager
-bind = $mainMod CTRL, R, exec, $scriptsDir/RofiThemeSelector.sh # KooL Rofi Menu Theme Selector
-bind = $mainMod CTRL SHIFT, R, exec, pkill rofi || true && $scriptsDir/RofiThemeSelector-modified.sh # modified Rofi Theme Selector
 
-bind = $mainMod SHIFT, F, fullscreen # whole full screen
-bind = $mainMod CTRL, F, fullscreen, 1 # fake full screen
-bind = ALT, SPACE, togglefloating, #Float Mode
-bind = $mainMod ALT, SPACE, exec, hyprctl dispatch workspaceopt allfloat #All Float Mode
 
-# Waybar / Bar related
-bind = $mainMod CTRL ALT, P, exec, pkill -SIGUSR1 waybar # Toggle hide/show waybar 
-#bind = $mainMod CTRL, B, exec, $scriptsDir/WaybarStyles.sh # Waybar Styles Menu
-#bind = $mainMod ALT, B, exec, $scriptsDir/WaybarLayout.sh # Waybar Layout Menu
 
-# FEATURES / EXTRAS (UserScripts)
-bind = $mainMod, N, exec, $scriptsDir/Kool_Quick_Settings.sh # Settings Menu KooL Hyprland Settings
-bind = $mainMod SHIFT, M, exec, $UserScripts/RofiBeats.sh # online music using rofi
-bind = $mainMod, W, exec, $UserScripts/WallpaperSelect.sh # Select wallpaper to apply
-bind = $mainMod SHIFT, W, exec, $UserScripts/WallpaperEffects.sh # Wallpaper Effects by imagemagick
-bind = CTRL ALT, W, exec, $UserScripts/WallpaperRandom.sh # Random wallpapers
-bind = $mainMod CTRL, O, exec, hyprctl setprop active opaque toggle # disable opacity on active window
-bind = $mainMod, K, exec, $scriptsDir/KeyBinds.sh # search keybinds via rofi
-bind = $mainMod SHIFT, A, exec, $scriptsDir/Animations.sh #hyprland animations menu
-bind = $mainMod SHIFT, O, exec, $UserScripts/ZshChangeTheme.sh # Change oh-my-zsh theme
-bindln = ALT_L, SHIFT_L, exec, $scriptsDir/SwitchKeyboardLayout.sh # Change keyboard layout
-bind = $mainMod ALT, C, exec, $UserScripts/RofiCalc.sh # calculator (qalculate)
-bind = $mainMod, S, exec, tofi-drun | xargs hyprctl dispatch exec --
 
-# Desktop zooming or magnifier
-bind = $mainMod ALT, mouse_down, exec, hyprctl keyword cursor:zoom_factor "$(hyprctl getoption cursor:zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor * 2.0}')"
-bind = $mainMod ALT, mouse_up, exec, hyprctl keyword cursor:zoom_factor "$(hyprctl getoption cursor:zoom_factor | awk 'NR==1 {factor = $2; if (factor < 1) {factor = 1}; print factor / 2.0}')" 
 
 
 
