--- a/.config/hypr/hypridle.conf
+++ b/.config/hypr/hypridle.conf
@@ -36,15 +36,15 @@ listener {
 
 # Turn off screen 
 # (disabled by default)
-listener {
-    timeout = 900                            # 10.5 min
-    on-timeout = hyprctl dispatch dpms off  # command to run when timeout has passed
-    on-resume = hyprctl dispatch dpms on    # command to run when activity is detected after timeout has fired.
-}
+# listener {
+#     timeout = 630                            # 10.5 min
+#     on-timeout = hyprctl dispatch dpms off  # command to run when timeout has passed
+#     on-resume = hyprctl dispatch dpms on    # command to run when activity is detected after timeout has fired.
+# }
 
 # Suspend # disabled by default
-listener {
-   timeout = 1200                            # 20 min
-   on-timeout = systemctl suspend # command to run when timeout has passed
-   on-resume = notify-send -i $iDIR " Oh! you're back" "Hello !!!"  # command to run when activity is detected after timeout has fired.
-}
+# listener {
+   # timeout = 1200                            # 20 min
+   # on-timeout = systemctl suspend # command to run when timeout has passed
+    # on-resume = notify-send -i $iDIR " Oh! you're back" "Hello !!!"  # command to run when activity is detected after timeout has fired.
+# }
