--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -14,19 +14,19 @@ source= $UserConfigs/01-UserDefaults.conf
 #### STANDAR ####
 # Common shortcuts
 #bindr = $mainMod, $mainMod_L, exec, pkill rofi || rofi -show drun -modi drun,filebrowser,run,window # Super Key to Launch rofi menu
-bindd = $mainMod, D, app launcher, exec, pkill rofi || true && rofi -show drun -modi drun,filebrowser,run,window
-bindd = $mainMod, B, open default browser, exec, xdg-open "https://"
+bindd = $mainMod, S, app launcher, exec, pkill rofi || true && rofi -show drun -modi drun,filebrowser,run,window
+bindd = CTRL ALT, B, open default browser, exec, xdg-open "https://"
 bindd = $mainMod, A, desktop overview, exec, $scriptsDir/OverviewToggle.sh # toggles quickshell or ags overview (tries QS first, falls back to AGS)
 #bindd = $mainMod, A, ags overview, exec, pkill rofi || true && ags -t 'overview' # desktop overview (if installed)
 #bindd = $mainMod, A, Quickshell overview, global, quickshell:overviewToggle # desktop overview (if installed)
-bindd = $mainMod, Return, Open terminal, exec, $term
+bindd = $mainMod, X, Open terminal, exec, $term
 bindd = $mainMod, E, file manager, exec, $files
 
 # FEATURES / EXTRAS
 bindd = $mainMod, H, help / cheat sheet, exec, $scriptsDir/KeyHints.sh
 bindd = $mainMod ALT, R, refresh bar and menus, exec, $scriptsDir/Refresh.sh
-bindd = $mainMod ALT, E, emoji menu, exec, $scriptsDir/RofiEmoji.sh
-bindd = $mainMod, S, web search, exec, $scriptsDir/RofiSearch.sh
+bindd = $mainMod, period, emoji menu, exec, $scriptsDir/RofiEmoji.sh
+# bindd = $mainMod, S, web search, exec, $scriptsDir/RofiSearch.sh
 bindd = $mainMod CTRL, S, window switcher, exec, rofi -show window
 bindd = $mainMod ALT, O, toggle blur, exec, $scriptsDir/ChangeBlur.sh
 bindd = $mainMod SHIFT, G, toggle game mode, exec, $scriptsDir/GameMode.sh
@@ -75,9 +75,10 @@ bindd = $mainMod CTRL, F12, move workspace to down monitor, movecurrentworkspace
 
 #### SYSTEM ####
 bindd = CTRL ALT, Delete, exit Hyprland, exec, hyprctl dispatch exit 0
-bindd = $mainMod, Q, close active window, killactive,
-bindd = $mainMod SHIFT, Q, Terminate active process, exec, $scriptsDir/KillActiveProcess.sh
-bindd = CTRL ALT, L, lock screen, exec, $scriptsDir/LockScreen.sh
+bindd = $mainMod, D, close active window, killactive,
+bindd = $mainMod, ESCAPE, close active window, killactive,
+bindd = ALT, F4, Terminate active process, exec, $scriptsDir/KillActiveProcess.sh
+bindd = $mainMod, L, lock screen, exec, $scriptsDir/LockScreen.sh
 bindd = CTRL ALT, P, powermenu, exec, $scriptsDir/Wlogout.sh
 bindd = $mainMod SHIFT, N, notification panel, exec, swaync-client -t -sw
 bindd = $mainMod SHIFT, E, Quick settings menu, exec, $scriptsDir/Kool_Quick_Settings.sh
@@ -121,31 +122,31 @@ bindld = , xf86audiostop, stop, exec, $scriptsDir/MediaCtrl.sh --stop
 
 # Screenshot keybindings NOTE: You may need to press Fn key as well
 bindd = $mainMod, Print, screenshot now, exec, $scriptsDir/ScreenShot.sh --now
-bindd = $mainMod SHIFT, Print, screenshot (area), exec, $scriptsDir/ScreenShot.sh --area
-bindd = $mainMod CTRL, Print, screenshot in 5s, exec, $scriptsDir/ScreenShot.sh --in5
-bindd = $mainMod CTRL SHIFT, Print, screenshot in 10s, exec, $scriptsDir/ScreenShot.sh --in10
-bindd = ALT, Print, screenshot active window, exec, $scriptsDir/ScreenShot.sh --active
+bindd = $mainMod SHIFT, S, screenshot (area), exec, $scriptsDir/ScreenShot.sh --area
+# bindd = $mainMod CTRL, Print, screenshot in 5s, exec, $scriptsDir/ScreenShot.sh --in5
+# bindd = $mainMod CTRL SHIFT, Print, screenshot in 10s, exec, $scriptsDir/ScreenShot.sh --in10
+# bindd = $mainMod, Print, screenshot active window, exec, $scriptsDir/ScreenShot.sh --active
 
 # screenshot with swappy (another screenshot tool)
 bindd = $mainMod SHIFT, S, screenshot (swappy), exec, $scriptsDir/ScreenShot.sh --swappy
 
 # Resize windows
-binded = $mainMod SHIFT, left, resize left (-50), resizeactive, -50 0
-binded = $mainMod SHIFT, right, resize right (+50), resizeactive, 50 0
-binded = $mainMod SHIFT, up, resize up (-50), resizeactive, 0 -50
-binded = $mainMod SHIFT, down, resize down (+50), resizeactive, 0 50
+binded = $mainMod ALT, left, resize left (-50), resizeactive, -50 0
+binded = $mainMod ALT, right, resize right (+50), resizeactive, 50 0
+binded = $mainMod ALT, up, resize up (-50), resizeactive, 0 -50
+binded = $mainMod ALT, down, resize down (+50), resizeactive, 0 50
 
 # Move windows
-bindd = $mainMod CTRL, left, move window left, movewindow, l
-bindd = $mainMod CTRL, right, move window right, movewindow, r
-bindd = $mainMod CTRL, up, move window up, movewindow, u
-bindd = $mainMod CTRL, down, move window down, movewindow, d
+bindd = $mainMod, left, move window left, movewindow, l
+bindd = $mainMod, right, move window right, movewindow, r
+bindd = $mainMod, up, move window up, movewindow, u
+bindd = $mainMod, down, move window down, movewindow, d
 
 # Swap windows
-bindd = $mainMod ALT, left, swap window left, swapwindow, l
-bindd = $mainMod ALT, right, swap window right, swapwindow, r
-bindd = $mainMod ALT, up, swap window up, swapwindow, u
-bindd = $mainMod ALT, down, swap window down, swapwindow, d
+#bindd = $mainMod ALT, left, swap window left, swapwindow, l
+#bindd = $mainMod ALT, right, swap window right, swapwindow, r
+#bindd = $mainMod ALT, up, swap window up, swapwindow, u
+#bindd = $mainMod ALT, down, swap window down, swapwindow, d
 
 # group
 bindd = $mainMod, G, toggle group, togglegroup
@@ -166,10 +167,10 @@ bindd = $mainMod CTRL, H, Move active out of group, moveoutofgroup # Move active
 #bindd = $mainMod, left, focus left, exec, bash -c 'if hyprctl activewindow -j | jq -e "((.grouped | type) == \"boolean\") or (.address == (.grouped[0] // empty))" >/dev/null 2>&1; then hyprctl dispatch movefocus l; else hyprctl dispatch changegroupactive b; fi'
 
 # Move focus with mainMod + arrow keys
-bindd = $mainMod, left, focus left, movefocus, l
-bindd = $mainMod, right, focus right, movefocus, r
-bindd = $mainMod, up, focus up, movefocus, u
-bindd = $mainMod, down, focus down, movefocus, d
+bindd = CTRL ALT, left, focus left, movefocus, l
+bindd = CTRL ALT, right, focus right, movefocus, r
+bindd = CTRL ALT, up, focus up, movefocus, u
+bindd = CTRL ALT, down, focus down, movefocus, d
 
 # Workspaces related
 bindd = $mainMod, tab, next workspace, workspace, m+1
