--- a/.config/hypr/configs/Startup_Apps.conf
+++ b/.config/hypr/configs/Startup_Apps.conf
@@ -36,7 +36,7 @@ exec-once = swaync
 #exec-once = ags
 #exec-once = blueman-applet
 #exec-once = rog-control-center
-exec-once = waybar
+#exec-once = waybar
 exec-once = qs -c overview  # Quickshell Overview
 
 # Clipboard manager
@@ -54,7 +54,7 @@ exec-once = $scriptsDir/Hyprsunset.sh init
 
 # Here are list of features available but disabled by default
 # Persistent wallpaper
-# exec-once = swww-daemon --format xrgb && swww img $HOME/Pictures/wallpapers/mecha-nostalgia.png 
+# exec-once = swww-daemon --format xrgb && swww img $HOME/Pictures/wallpapers/mecha-nostalgia.png
 
 # Gnome polkit for NixOS
 #exec-once = $scriptsDir/Polkit-NixOS.sh
