--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -67,10 +67,10 @@ bindlnd = SHIFT_L, ALT_L, switch keyboard layout per-window, exec, $scriptsDir/T
 bindd = $mainMod ALT, C, calculator, exec, $UserScripts/RofiCalc.sh
 
 # Move current workspaces to monitors (left right up or down)
-bindd = $mainMod CTRL, F9, move workspace to left monitor, movecurrentworkspacetomonitor, l
-bindd = $mainMod CTRL, F10, move workspace to right monitor, movecurrentworkspacetomonitor, r
-bindd = $mainMod CTRL, F11, move workspace to up monitor, movecurrentworkspacetomonitor, u
-bindd = $mainMod CTRL, F12, move workspace to down monitor, movecurrentworkspacetomonitor, d
+bindd = $mainMod SHIFT, left, move workspace to left monitor, movecurrentworkspacetomonitor, l
+bindd = $mainMod SHIFT, right, move workspace to right monitor, movecurrentworkspacetomonitor, r
+bindd = $mainMod SHIFT, up, move workspace to up monitor, movecurrentworkspacetomonitor, u
+bindd = $mainMod SHIFT, down, move workspace to down monitor, movecurrentworkspacetomonitor, d
 
 
 #### SYSTEM ####
@@ -194,33 +194,33 @@ bindd = $mainMod, code:17, workspace 8, workspace, 8 # NOTE: code:17 = key 8
 bindd = $mainMod, code:18, workspace 9, workspace, 9 # NOTE: code:18 = key 9
 bindd = $mainMod, code:19, workspace 10, workspace, 10 # NOTE: code:19 = key 0
 
-# Move active window and follow to workspace mainMod + SHIFT [0-9]
-bindd = $mainMod SHIFT, code:10, move to workspace 1, movetoworkspace, 1 # NOTE: code:10 = key 1
-bindd = $mainMod SHIFT, code:11, move to workspace 2, movetoworkspace, 2 # NOTE: code:11 = key 2
-bindd = $mainMod SHIFT, code:12, move to workspace 3, movetoworkspace, 3 # NOTE: code:12 = key 3
-bindd = $mainMod SHIFT, code:13, move to workspace 4, movetoworkspace, 4 # NOTE: code:13 = key 4
-bindd = $mainMod SHIFT, code:14, move to workspace 5, movetoworkspace, 5 # NOTE: code:14 = key 5
-bindd = $mainMod SHIFT, code:15, move to workspace 6, movetoworkspace, 6 # NOTE: code:15 = key 6
-bindd = $mainMod SHIFT, code:16, move to workspace 7, movetoworkspace, 7 # NOTE: code:16 = key 7
-bindd = $mainMod SHIFT, code:17, move to workspace 8, movetoworkspace, 8 # NOTE: code:17 = key 8
-bindd = $mainMod SHIFT, code:18, move to workspace 9, movetoworkspace, 9 # NOTE: code:18 = key 9
-bindd = $mainMod SHIFT, code:19, move to workspace 10, movetoworkspace, 10 # NOTE: code:19 = key 0
-bindd = $mainMod SHIFT, bracketleft, move to previous workspace, movetoworkspace, -1 # brackets [
-bindd = $mainMod SHIFT, bracketright, move to next workspace, movetoworkspace, +1 # brackets ]
+# Move active window and follow to workspace mainMod + CTRL [0-9]
+bindd = $mainMod CTRL, code:10, move to workspace 1, movetoworkspace, 1 # NOTE: code:10 = key 1
+bindd = $mainMod CTRL, code:11, move to workspace 2, movetoworkspace, 2 # NOTE: code:11 = key 2
+bindd = $mainMod CTRL, code:12, move to workspace 3, movetoworkspace, 3 # NOTE: code:12 = key 3
+bindd = $mainMod CTRL, code:13, move to workspace 4, movetoworkspace, 4 # NOTE: code:13 = key 4
+bindd = $mainMod CTRL, code:14, move to workspace 5, movetoworkspace, 5 # NOTE: code:14 = key 5
+bindd = $mainMod CTRL, code:15, move to workspace 6, movetoworkspace, 6 # NOTE: code:15 = key 6
+bindd = $mainMod CTRL, code:16, move to workspace 7, movetoworkspace, 7 # NOTE: code:16 = key 7
+bindd = $mainMod CTRL, code:17, move to workspace 8, movetoworkspace, 8 # NOTE: code:17 = key 8
+bindd = $mainMod CTRL, code:18, move to workspace 9, movetoworkspace, 9 # NOTE: code:18 = key 9
+bindd = $mainMod CTRL, code:19, move to workspace 10, movetoworkspace, 10 # NOTE: code:19 = key 0
+bindd = $mainMod CTRL, bracketleft, move to previous workspace, movetoworkspace, -1 # brackets [
+bindd = $mainMod CTRL, bracketright, move to next workspace, movetoworkspace, +1 # brackets ]
 
-# Move active window to a workspace silently mainMod + CTRL [0-9]
-bindd = $mainMod CTRL, code:10, move silently to workspace 1, movetoworkspacesilent, 1 # NOTE: code:10 = key 1
-bindd = $mainMod CTRL, code:11, move silently to workspace 2, movetoworkspacesilent, 2 # NOTE: code:11 = key 2
-bindd = $mainMod CTRL, code:12, move silently to workspace 3, movetoworkspacesilent, 3 # NOTE: code:12 = key 3
-bindd = $mainMod CTRL, code:13, move silently to workspace 4, movetoworkspacesilent, 4 # NOTE: code:13 = key 4
-bindd = $mainMod CTRL, code:14, move silently to workspace 5, movetoworkspacesilent, 5 # NOTE: code:14 = key 5
-bindd = $mainMod CTRL, code:15, move silently to workspace 6, movetoworkspacesilent, 6 # NOTE: code:15 = key 6
-bindd = $mainMod CTRL, code:16, move silently to workspace 7, movetoworkspacesilent, 7 # NOTE: code:16 = key 7
-bindd = $mainMod CTRL, code:17, move silently to workspace 8, movetoworkspacesilent, 8 # NOTE: code:17 = key 8
-bindd = $mainMod CTRL, code:18, move silently to workspace 9, movetoworkspacesilent, 9 # NOTE: code:18 = key 9
-bindd = $mainMod CTRL, code:19, move silently to workspace 10, movetoworkspacesilent, 10 # NOTE: code:19 = key 0
-bindd = $mainMod CTRL, bracketleft, move silently to previous workspace, movetoworkspacesilent, -1 # brackets [
-bindd = $mainMod CTRL, bracketright, move silently to next workspace, movetoworkspacesilent, +1 # brackets ]
+# Move active window to a workspace silently mainMod + SHIFT [0-9]
+#bindd = $mainMod SHIFT, code:10, move silently to workspace 1, movetoworkspacesilent, 1 # NOTE: code:10 = key 1
+#bindd = $mainMod SHIFT, code:11, move silently to workspace 2, movetoworkspacesilent, 2 # NOTE: code:11 = key 2
+#bindd = $mainMod SHIFT, code:12, move silently to workspace 3, movetoworkspacesilent, 3 # NOTE: code:12 = key 3
+#bindd = $mainMod SHIFT, code:13, move silently to workspace 4, movetoworkspacesilent, 4 # NOTE: code:13 = key 4
+#bindd = $mainMod SHIFT, code:14, move silently to workspace 5, movetoworkspacesilent, 5 # NOTE: code:14 = key 5
+#bindd = $mainMod SHIFT, code:15, move silently to workspace 6, movetoworkspacesilent, 6 # NOTE: code:15 = key 6
+#bindd = $mainMod SHIFT, code:16, move silently to workspace 7, movetoworkspacesilent, 7 # NOTE: code:16 = key 7
+#bindd = $mainMod SHIFT, code:17, move silently to workspace 8, movetoworkspacesilent, 8 # NOTE: code:17 = key 8
+#bindd = $mainMod SHIFT, code:18, move silently to workspace 9, movetoworkspacesilent, 9 # NOTE: code:18 = key 9
+#bindd = $mainMod SHIFT, code:19, move silently to workspace 10, movetoworkspacesilent, 10 # NOTE: code:19 = key 0
+#bindd = $mainMod SHIFT, bracketleft, move silently to previous workspace, movetoworkspacesilent, -1 # brackets [
+#bindd = $mainMod SHIFT, bracketright, move silently to next workspace, movetoworkspacesilent, +1 # brackets ]
 
 # Scroll through existing workspaces with mainMod + scroll
 bindd = $mainMod, mouse_down, next workspace, workspace, e+1
