--- a/.config/hypr/configs/Keybinds.conf
+++ b/.config/hypr/configs/Keybinds.conf
@@ -37,7 +37,7 @@ bindd = $mainMod CTRL SHIFT, R, rofi theme selector (modified), exec, pkill rofi
 
 bindd = $mainMod SHIFT, F, fullscreen, fullscreen
 bindd = $mainMod CTRL, F, maximize window, fullscreen, 1
-bindd = $mainMod, SPACE, Float current window, togglefloating,
+bindd = ALT, SPACE, Float current window, togglefloating,
 bindd = $mainMod ALT, SPACE, Float all windows, exec, hyprctl dispatch workspaceopt allfloat
 bindd = $mainMod SHIFT, Return, DropDown terminal, exec, $scriptsDir/Dropterminal.sh $term
 
